--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 *.cpp linguist-detectable=false
-*.c linguist-detectable=false
-*.cMake linguist-detectable=false
+*.C linguist-detectable=false
+*.CMake linguist-detectable=false
